--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,5 @@
-
-hosts.testing~
-hosts.testing/kirils-hosts.1~
-
 *.md~
-
 *.1~
-
 *.txt~
 
 *.sh~
@@ -15,3 +9,13 @@ hosts.testing/kirils-hosts.1~
 *.4~
 
 *.0~
+kirilhosts.1
+kirilhosts.2
+kirilhosts.3
+kirilhosts.4
+kirilhosts.5
+kirilhosts.6
+kirilhosts.7
+kirilhosts.8
+kirilhosts.9
+
